edit setup, create, changes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
 <li>It's hard (but not impossible) to accidentally overlook or overwrite someone's changes: the version control system automatically notifies users whenever there's a conflict between one person's work and another's.</li>
 </ul>
 <p>Version control is the lab notebook of the digital world: it's what professionals use to keep track of what they've done and to collaborate with other people. Every large software development project relies on it, and most programmers use it for their small jobs as well. And it isn't just for software: books, papers, small data sets, and anything that changes over time or needs to be shared can and should be stored in a version control system.</p>
-<div id="prerequisites" class="prereq">
-<h2>Prerequisites</h2>
-<p>In this lesson we use Git from the Unix Shell. Some previous experience with the shell is expected, <em>but isn't mandatory</em>.</p>
-</div>
+<p>In this lesson we walk through the steps of implementing and using Git for version control as we develop a small Python program.</p>
+<h2 id="prerequisites" class="prereq">Prerequisites</h2>
+<p>Some previous experience with the Unix shell and Python is expected, <em>but isn't mandatory</em>.</p>
 <h2 id="topics">Topics</h2>
 <ol style="list-style-type: decimal">
 <li><a href="01-setup.html">Setting Up Git</a></li>
