--- a/03-changes.html
+++ b/03-changes.html
@@ -240,6 +240,7 @@ $ git commit -m &quot;my recent changes&quot;</code></pre></li>
 <h2><code>bio</code> Repository</h2>
 <p>Create a new Git repository on your computer called <code>bio</code>. Write a three-line biography for yourself in a file called <code>me.txt</code>, commit your changes, then modify one line and add a fourth and display the differences between its updated state and its original state.</p>
 </div>
+<p><a href="index.html">Home</a> <a href="02-create.html">Previous</a> <a href="04-history.html">Next</a></p>
         </div>
       </div>
       <div class="footer">
