--- a/05-ignore.html
+++ b/05-ignore.html
@@ -85,6 +85,7 @@ fatal: no files added</code></pre>
 #        results/
 
 nothing to commit, working directory clean</code></pre>
+<p><a href="index.html">Home</a> <a href="04-history.html">Previous</a> <a href="06-collab.html">Next</a></p>
         </div>
       </div>
       <div class="footer">
