--- a/04-history.html
+++ b/04-history.html
@@ -140,6 +140,7 @@ print round(bmi,1)</code></pre>
 <li>Both 2 &amp; 4</li>
 </ol>
 </div>
+<p><a href="index.html">Home</a> <a href="03-changes.html">Previous</a> <a href="05-ignore.html">Next</a></p>
         </div>
       </div>
       <div class="footer">
