--- a/06-collab.html
+++ b/06-collab.html
@@ -155,6 +155,7 @@ Fast-forward
 <h2>GitHub Timestamp</h2>
 <p>Create a repository on GitHub, clone it, add a file, push those changes to GitHub, and then look at the <a href="reference.html#timestamp">timestamp</a> of the change on GitHub. How does GitHub record times, and why?</p>
 </div>
+<p><a href="index.html">Home</a> <a href="05-ignore.html">Previous</a> <a href="07-conflict.html">Next</a></p>
         </div>
       </div>
       <div class="footer">
