remove links to open science

--- a/07-conflict.html
+++ b/07-conflict.html
@@ -162,7 +162,7 @@ print &#39;Body Mass Index (BMI): %s&#39; % (round(bmi,1))</code></pre>
 <h2>Conflicts on Non-textual files</h2>
 <p>What does Git do when there is a conflict in an image or some other non-textual file that is stored in version control?</p>
 </div>
-<p><a href="index.html">Home</a> <a href="06-collab.html">Previous</a> <a href="08-open.html">Next</a></p>
+<p><a href="index.html">Home</a> <a href="06-collab.html">Previous</a></p>
         </div>
       </div>
       <div class="footer">
