create all topics page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <li><a href="06-collab.html">Collaborating</a></li>
 <li><a href="07-conflict.html">Conflicts</a></li>
 </ol>
+<p><a href="all.html">All topics on one page</a></p>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
 <li><a href="reference.html">Reference</a></li>
